# bachelor

./: Cargo.toml
benches/: simd_bench.rs
generatedata/: main.py
src/: lib.rs  main.rs
src/constants/: mod.rs  simd_traits.rs
src/constants/simd/: mod.rs  simd_primitive_trait_bounds.rs  simd_type.rs  simd_type_trait_bounds.rs
src/constants/utils/: helper_traits.rs  mod.rs
src/static_files/: mod.rs  simd_traits.rs
