[package]
name = "bachelor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "simd_bench"
harness = false  # This tells Cargo not to use the default test harness, as Criterion brings its own
